# neurosnap

./: .gitignore  LICENSE  Makefile  README-base.md  README.md  RELEASING.md  create_docs.py  pyproject.toml
docs/: Makefile  make.bat
docs/source/: chemicals.rst  conf.py  conformers.rst  getting_started.rst  index.rst  log.rst  modules.rst  msa.rst  neurosnap.algos.LDDT.rst  neurosnap.algos.alphafold.rst  neurosnap.algos.amber_relax.rst  neurosnap.algos.clusterprot.rst  neurosnap.algos.ec_interface.rst  neurosnap.algos.evoef2.rst  neurosnap.algos.evoef2_lib.constants.rst  neurosnap.algos.evoef2_lib.rst  neurosnap.algos.evoef2_lib.weights.rst  neurosnap.algos.ipsae.rst  neurosnap.algos.kluster.rst  neurosnap.algos.pdockq.rst  neurosnap.algos.rst  neurosnap.api.rst  neurosnap.chemicals.rst  neurosnap.conformers.rst  neurosnap.constants.rst  neurosnap.log.rst  neurosnap.msa.rst  neurosnap.nucleotide.rst  neurosnap.protein.rst  neurosnap.rendering.rst  neurosnap.rst  protein.rst
docs/source/_static/: custom.css
docs/source/_templates/: navbar-nav.html
example_notebooks/: ClusterProt.ipynb  api.ipynb  bulk_af3_and_binding.ipynb  peptide_fragmentation_admet.ipynb  plots_and_animations.ipynb  protein_optimization.ipynb
scripts/: patch_apidoc_titles.py
src/neurosnap/: _compat.py  api.py  chemicals.py  conformers.py  constants.py  log.py  msa.py  nucleotide.py  protein.py  rendering.py
src/neurosnap/algos/: LDDT.py  alphafold.py  amber_relax.py  clusterprot.py  ec_interface.py  evoef2.py  ipsae.py  ipsae_refactored.py  kluster.py  lDDT.py  lddt.py  pdb2pqr.py  pdockq.py
src/neurosnap/chemistry/: __init__.py  conformers.py  geometry.py  smiles.py
src/neurosnap/constants/: __init__.py  api.py  chemistry.py  sequence.py  structure.py
src/neurosnap/database/: __init__.py  blast.py  ccd.py  foldseek.py  uniprot.py
src/neurosnap/io/: mmcif.py  pdb.py  pqr.py  sdf.py
src/neurosnap/sequence/: __init__.py  align.py  nucleotide.py  protein.py
src/neurosnap/sequences/: msa.py  proteins.py
src/neurosnap/structure/: __init__.py  _common.py  analysis.py  compare.py  filters.py  interactions.py  interface.py  properties.py  rendering.py  selectors.py  structure.py
src/neurosnap/structures/: chemicals.py  conformers.py  proteins.py
src/structures/: chem.py
tests/: __init__.py  _structure_test_utils.py  test_chemicals.py  test_clusterprot.py  test_ec_interface.py  test_evoef2.py  test_ipsae.py  test_kluster.py  test_lddt.py  test_msa.py  test_nucleotide.py  test_pdockq.py  test_protein.py  test_rendering.py  test_structure_compare.py  test_structure_core.py  test_structure_interface.py  test_structure_io.py  test_wolfpsort.py
tests/algos/: __init__.py  test_clusterprot.py  test_ec_interface.py  test_evoef2.py  test_ipsae.py  test_kluster.py  test_lddt.py  test_pdb2pqr.py  test_pdockq.py
tests/chemistry/: __init__.py  test_chemicals.py  test_conformers.py  test_constants.py  test_geometry.py  test_smiles.py
tests/database/: __init__.py  test_ccd.py  test_database_uniprot.py
tests/files/: P62593_Beta_lactamase_CF_bfd.a3m  P62593_Beta_lactamase_CF_uniref.a3m  P62593_Beta_lactamase_NS.a3m  Structure2D_COMPOUND_CID_3345.sdf  dimer_af2.json  dimer_ptm_protein_with_nanobody.cif  dimer_ptm_protein_with_nanobody.json  input_ligand.sdf  lrrk2_8fo2_with_ptm_truncated.cif  orf1_boltz1.cif  phosphotyrosine_peptide_and_GRB2_chai_1_rank1.cif  phosphotyrosine_peptide_and_GRB2_chai_1_rank2.cif  rna_monomer_1.cif  rna_monomer_2.cif
tests/files/af3/: boltz_2_dimer.cif  boltz_2_dimer.json  boltz_2_dimer_ptm.cif  boltz_2_dimer_ptm.json  (+15 more)
tests/sequence/: __init__.py  test_align.py  test_msa.py  test_nucleotide.py  test_sequence_protein.py
tests/structure/: __init__.py  test_pqr_io.py  test_structure_compare.py  test_structure_core.py  test_structure_interface.py  test_structure_io.py
tests/visualization/: __init__.py  test_rendering.py
(+36 files in other folders)
